user can add and search in records

--- a/app/app.html
+++ b/app/app.html
@@ -4,10 +4,20 @@
     <meta charset="utf-8">
     <title>PartsDBManager</title>
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../dist/style.css" />
   </head>
   <body>
     <div id="root"></div>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="../dist/bundle.js"></script>
   </body>
+  <style type="text/css" media="screen">
+    #root {
+      height: 100%;
+    }
+    #root > div {
+      height: inherit;
+    }
+  </style>
 </html>
