--- a/app/hot-dev-app.html
+++ b/app/hot-dev-app.html
@@ -3,10 +3,20 @@
   <head>
   	<meta charset="utf-8">
     <title>PartsDBManager</title>
+    <link rel="stylesheet" href="http://localhost:3000/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css" />
   </head>
   <body>
     <div id="root"></div>
+    <script src="http://localhost:3000/bootstrap/js/bootstrap.min.js"></script>
     <script src="http://localhost:3000/dist/bundle.js"></script>
   </body>
+  <style type="text/css" media="screen">
+    #root {
+      height: 100%;
+    }
+    #root > div {
+      height: inherit;
+    }
+  </style>
 </html>
